# lgbtpp

./: .gitignore  .pdm-python  .pylintrc  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
lgbtpp/: __init__.py  agender.py  aromantic.py  asexual.py  bisexual.py  gay.py  intersex.py  lesbian.py  plus.py  queer.py  questioning.py  transgender.py  two_spirit.py
src/lgbtpp/: __init__.py  agender.py  aromantic.py  asexual.py  bisexual.py  gay.py  helpers.py  intersex.py  lesbian.py  plus.py  queer.py  questioning.py  transgender.py  two-spirit.py
tests/: test_agender.py  test_aromantic.py  test_asexual.py  test_bisexual.py  test_gay.py  test_intersex.py  test_lesbian.py  test_plus.py  test_queer.py  test_questioning.py  test_transgender.py  test_two_spirit.py
